# cyberfidget-firmware

./: .gitignore  Dockerfile.build  Jenkinsfile  docker-compose.yaml  merged_build.txt  platformio.ini
.github/workflows/: build-release.yml  compile-wasm.yml  docker-build.yml
include/: declares.h  fontSuiGenerisRg.h  images.h
lib/AppDefs/: AppDefs.cpp  AppDefs.h  AppManifest.h  AppManifest_Includes.h  library.json
lib/AppManager/: AppManager.cpp  AppManager.h  library.json
lib/AudioManager/: AudioManager.cpp  AudioManager.h  library.json
lib/BatteryManager/: BatteryManager.cpp  BatteryManager.h  library.json
lib/BewilderYourBrain/: BewilderYourBrain.cpp
lib/Booper/: Booper.cpp  Booper.h  library.json
lib/BootAnimation/: BootAnimation.cpp  BootAnimation.h
lib/BreakoutGame/: BreakoutGame.cpp  BreakoutGame.h  library.json
lib/ButtonManager/: ButtonManager.cpp  ButtonManager.h  library.json
lib/CFHAL/: CFHAL.cpp  CFHAL.h
lib/ClockDisplay/: ClockDisplay.cpp  ClockDisplay.h  library.json
lib/CyberFidgie/: MyScreensaver.cpp  MyScreensaver.h
lib/DinoGame/: DinoGame.cpp  DinoGame.h  DinoSprites.h  library.json
lib/DisplayManager/: library.json
lib/DisplayProxy/: DisplayProxy.cpp  DisplayProxy.h  library.json
lib/ExampleScreens/: ExampleScreens.cpp  ExampleScreens.h  library.json
lib/Eye/: Eye.cpp  Eye.h
lib/Flashlight/: Flashlight.cpp  Flashlight.h  library.json
lib/Ghosts/: Ghosts.cpp  Ghosts.h
lib/Globals/: globals.cpp  globals.h  library.json  version.h.template
lib/GraveyardScreensaver/: GraveyardScreensaver.cpp  GraveyardScreensaver.h
lib/HAL/: HAL.cpp  HAL.h  HAL_App_Example.cpp  HAL_Example.cpp  library.json
lib/Images/: images.cpp  images.h  library.json
lib/MatrixScreensaver/: MatrixScreenSaver.h  MatrixScreensaver.cpp  MatrixScreensaver.h  fontNotoSansJPReg.h  library.json
lib/MatrixScreensaverDither/: MatrixScreensaverDither.cpp  MatrixScreensaverDither.h  library.json
lib/MenuManager/: Animation.cpp  Animation.h  MenuManager.cpp  MenuManager.h  UIElement.h  library.json
lib/MusicPlayerApp/: BTScanner.cpp  BTScanner.h  ID3Scanner.cpp  ID3Scanner.h  MusicPlayerApp.cpp  MusicPlayerApp.h
lib/PixelWaterfallGame/: PixelWaterfallGame.cpp  PixelWaterfallGame.h
lib/PowerManager/: PowerManager.cpp  PowerManager.h  library.json
lib/RGBController/: RGBController.cpp  RGBController.h  library.json
lib/ReactionTimeGame/: ReactionTimeGame.cpp  ReactionTimeGame.h  library.json
lib/SPHFluidGame/: SPHFluidGame.cpp  SPHFluidGame.h  library.json
lib/SerialDisplay/: SerialDisplay.cpp  SerialDisplay.h  SerialDisplayApp.cpp  SerialDisplayApp.h  library.json
lib/SimonSaysGame/: SimonSaysGame.cpp  SimonSaysGame.h  library.json
lib/SliderPosition/: SliderPosition.cpp  SliderPosition.h  library.json
lib/Spaceship/: Spaceship.cpp  Spaceship.h
lib/SpectrumAnalyzer/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
lib/Splooty/: Splooty.cpp  Splooty.h
lib/StratagemGame/: StratagemGame.cpp  StratagemGame.h  StratagemGameSprites.h
lib/WebPortalApp/: WebPortalApp.cpp  WebPortalApp.h  portal_page.h
lib/WiFiManagerCF/: WiFiManagerCF.cpp  WiFiManagerCF.h  library.json
scripts/: add_iram_diet.py  add_network_lib.py  analyze_iram.py  merge_firmware.py  merged_build.bat  update_version.py
src/: main.cpp
wasm/: CMakeLists.txt  build.bat  build.sh  build_wasm.bat  build_wasm.sh  main_wasm.cpp
wasm/hal/: HAL_WASM.cpp  audio_wasm.cpp  wasm_fonts.cpp  wasm_runtime.cpp
wasm/shims/: Adafruit_NeoPixel.h  Animation.h  AppManager.h  Arduino.h  AudioTools.h  ESPAsyncWebServer.h  MenuManager.h  OLEDDisplayFonts.h  OLEDDisplayFonts_real.h  Preferences.h  SSD1306Wire.h  SparkFun_LIS2DH12.h  SparkFun_MAX1704x_Fuel_Gauge_Arduino_Library.h  UIElement.h  WiFi.h  WiFiManager.h  Wire.h  esp_log.h  esp_sleep.h  esp_system.h  esp_task_wdt.h
wasm/shims/freertos/: FreeRTOS.h  task.h
